style.css
@font-face {
        font-family: 'Rokkitt';
        src: url('fonts/Rokkitt-Regular.ttf');
        font-weight: normal;
}

@font-face {
        font-family: 'Rokkitt';
        src: url('fonts/Rokkitt-Bold.ttf');
        font-weight: bold;
}

* {
        box-sizing: border-box
}

html {
        font-family: 'Rokkitt', serif;
        line-height: 1.15;
        -webkit-text-size-adjust: 100%;
        -webkit-tap-highlight-color: transparent;
}

body {
        background-color: #fff;
        color: #37526c;
        margin: 0;
        padding: 0;
        font-size: 1rem;
        font-weight: normal;
        text-align: left;
}

p {
        line-height: 1.5rem;
}

li {
        line-height: 1.8rem;
        color: #ff59ee;
}

li > span {
        color: #5b7c9d;
}

a {
        text-decoration: none;
        color: #00c1ff;
        background-color: transparent;
}

a:hover {
        color: #62D9FF;
        text-decoration: underline;
}

h1, h2, h3, ul, .app > span, .tag, #breadcrumbs {
        font-family: -apple-system, BlinkMacSystemFont, "Lucida Grande", "Helvetica Neue", sans-serif;
}

h1 {
        font-size: 1.5rem;
        color: #00c1ff;
}

h2 {
        font-size: 1.2rem;
}

h3 {
        font-size: 1rem;
        padding: 0.45em 0 0.35em 1.2em;
        background-color: #62D9FF;
        width: 220px;
        display: inline-block;
        border-radius: 3em;
        color: #000000;
        margin-bottom: 0;
}

#centred_content {
        width: 400px;
        margin: 0 auto;
        padding: 0 16px;
        border: 0;
}

#heading {
        width: 100%;
        text-align: center;
        margin: 6em 0 4em 0;
}

#breadcrumbs {
        font-size: 0.8em;
        color: #ff59ee;
        width: 100%;
        padding: 1.2em 1.7em 1em 1.7em;
        background-color: rgba(255, 89, 238, 0.1);
        border-width: 1px 0;
        border-color: rgba(255, 89, 238, 0.2);
        border-style: solid;
}

#breadcrumbs > a {
        font-size: 1.3em;
        font-weight: bold;
}

.app {
        display: flex;
        align-items: center;
}

.app > #app_icon {
        margin: 0 0 2px 0;
        z-index: 1;
}

.app > #app_name {
        margin: 3px 0 0 0.5em;
        font-weight: bold;
        color: black;
        margin-left: -2.4em;
        background-color: rgba(255, 89, 238, 0.15);
        border-radius: 2em;
        padding: 0.5em 1.5em 0.5em 3em;
}

.app:hover {
        text-decoration: none;
}

.app:hover > #app_name {
        background-color: #ff59ee;
}

.tag {
        padding: 2px 6px;
        background-color: rgba(255, 89, 238, 0.2);
        color: #ff59ee;
        font-size: 0.75rem;
        font-weight: bold;
        border-radius: 6px;
}

hr.separator {
        border-color: rgba(255, 89, 238, 0.08);
        margin: 1px 0 1px 30px;
}

#footer {
        text-align: center;
        font-size: 0.85rem;
        color: #a7bfd9;
        margin: 5em 0 3em 0;
}

#footer > hr {
        border-color: #62D9FF;
        border-style: dotted;
        margin-bottom: 2em;
}

@media print, screen and (max-width: 400px) {
        body {
                word-wrap: break-word;
        }
        
        #centred_content {
                width: auto;
                margin: 0;
        }
}
        
@media print {
        body {
                padding: 0.4in;
                font-size: 12pt;
        }
}

